--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
-  <!DOCTYPE html>
-  <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>html</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>html</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-  <body>
-    <div class="links">
-      <ul>
-        <li><button id="top" type="button" name="button">Home</button></li>
-        <li><a href="#table">Table</a></li>
-        <li><a href="#hobbies">Hobbies</a></li>
-        <li><a href="#story">Story</a></li>
-      </ul>
-    </div>
+<body>
+  <div class="links">
+    <ul>
+      <li><button id="top" class="button" type="button" name="button">Home</button></li>
+      <li><a href="#table">Table</a></li>
+      <li><a href="#hobbies">Hobbies</a></li>
+      <li><a href="#story">Story</a></li>
+    </ul>
+  </div>
 
-    <div class="banner">
-      <hi class="name">Ahmad</hi>
-      <q cite="">
-        Today is the only day. Yesterday is gone.
-      </q>
-      <img src="#" alt="stayhome">
-    </div>
+  <div class="banner">
+    <hi class="name">Ahmad</hi>
+    <q cite="">
+      Today is the only day. Yesterday is gone.
+    </q>
+    <img src="#" alt="#stayhome">
+  </div>
+  <div class="hr">
+
+
     <div id="table" class="table">
       <h2>I am hardworking person</h2>
       <p>Lorem ipsum dolor sit amet.
@@ -53,13 +56,14 @@
       <h3>Hobbies</h3>
       <ul>
         <li>Football</li>
-        <li>Movies</li>
-        <ul>
-          <li>M.I rogue state</li>
-          <li>Westworld</li>
-          <li>Sillicon alley</li>
-        </ul>
         <li>Reading</li>
+        <li>Movies
+          <u class="nlist">
+        <li>M.I rogue state</li>
+        <li>Westworld</li>
+        <li>Sillicon alley</li>
+      </ul>
+      </li>
       </ul>
     </div>
     <div id="story" class="story">
@@ -71,27 +75,28 @@
         </p>
       </div>
       <div class="col-2">
-          <h3>Funny Story</h3>
-          <p>Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit.
-            Aliquam quidem facere
-            minus dolorem
-            dolore similique
-            assumenda perferendis, maxime iste sit.
-          </p>
+        <h3>Funny Story</h3>
+        <p>Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit.
+          Aliquam quidem facere
+          minus dolorem
+          dolore similique
+          assumenda perferendis, maxime iste sit.
+        </p>
       </div>
       <div class="col-3">
         <h4>Moral of the story</h4>
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
     </div>
-    <footer>
-      <div class="footer">
-        <a class="link-1" href="#">Yuri f</a>
-        <a class="link-2" href="#top">Ahmed</a>
-        <a class="link-3" href="#">Arnaud Langenus</a>
-      </div>
-    </footer>
-  </body>
+  </div>
+  <footer>
+    <div class="footer">
+      <a class="link-1" href="#">Yuri f</a>
+      <a class="link-2" href="#top">Ahmed</a>
+      <a class="link-3" href="#">Arnaud Langenus</a>
+    </div>
+  </footer>
 
-  </html>
+  </div>
+</body>
